compiler/testData/diagnostics/tests/enum/AbstractEnum.kt
// FIR_IDENTICAL
package abstract

<!WRONG_MODIFIER_TARGET!>abstract<!> enum class MyAbstractEnum() {}